--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/bai-jamjuree": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@types/react": "~18.0.27",
     "expo": "~48.0.18",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -22,7 +25,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "eslint": "^8.45.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
